Update of the html version to display random numbers first.

--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,9 @@ and open the template in the editor.
                         </div> 
                     </div>
                     <div class="button-holder">
-                        <button id="generate"><h2>Generate</h2></button>
+                        <button id="generate">
+                            <h2>Generate</h2>
+                        </button>
                     </div>
                 </div>
                 
